assets/css/heart-markers.css
.js-enabled ul li.no-heart::before {
  content: "•";
  position: absolute;
  transform: translate(-0.8em, -0.2em);
  font-size: 1.3em;
}

.js-enabled ul li.with-heart::before {
  content: "";
  position: absolute;
  transform: translate(-1.2em, 0.5em);
  width: var(--heart-size);
  height: var(--heart-size);
  background: url(/heart-marker.svg);
  background-size: cover;
  font-size: initial;
}

.js-enabled ul li::marker {
  content: "";
}

